syntax = "proto3";
package quorum.pb;
option go_package = "github.com/rumsystem/quorum/internal/pkg/pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

message AnyObj {
    google.protobuf.Any any=1;
}

message Object {
  string id = 1;
  string type = 2;
  repeated Object attachments = 3;
  repeated Object attributedTo = 4;
  Object audience = 5;
  string content = 6;
  Object context = 7;
  string name = 8;
  google.protobuf.Timestamp endtime = 9;
  Object generator= 10;
  repeated Object icon = 11;
  repeated Image image = 12;
  Reply inreplyto = 13;
  Object location = 14;
  Object preview = 15;
  google.protobuf.Timestamp published = 16;
  Object replies  = 17;
  google.protobuf.Timestamp startTime = 18;
  string summary = 19;
  repeated Object tag = 20;
  google.protobuf.Timestamp updated = 21;
  repeated Link url = 22;
  repeated Object to = 23;
  repeated Object bto = 24;
  repeated Object cc = 25;
  repeated Object bcc = 26;
  string mediaType= 27;
  string duration = 28;
  File file = 29;
}

message Link {
  string href = 1;
  repeated string rel = 2;
  string mediaType= 3;
  string name = 4;
  string hreflang = 5;
  uint32 height = 6;
  uint32 width = 7;
  Object preview =8;
}

message Reply {
    string trxid = 1;
    string  groupid  = 2;
}

message Image {
  string id = 1;
  string name = 2;
  string mediaType= 3;
  bytes content = 4;
  string url = 5;
}

message File {
  string id = 1;
  string name = 2;
  string mediaType= 3;
  enum Compression {
    none = 0;
    gz = 1;
    zip = 2;
    zstd = 3;
  }
  Compression compression = 4;
  bytes content = 5;
  string url = 6;
}

message Person {
  string id = 1;
  string name = 2;
  Image image = 3;
  repeated Payment wallet = 11;
}

message Payment {
    string id = 1;
    string type = 2;
    string name = 3;
}

message Activity {
  string id = 1;
  string type = 2;
  repeated Object attachments = 3;
  repeated Object attributedTo = 4;
  Object audience = 5;
  string content = 6;
  Object context = 7;
  string name = 8;
  google.protobuf.Timestamp endtime = 9;
  Object generator= 10;
  repeated Object icon = 11;
  repeated Object image = 12;
  Object inReplyTo = 13;
  Object location = 14;
  Object preview = 15;
  google.protobuf.Timestamp published = 16;
  Object replies  = 17;
  google.protobuf.Timestamp startTime = 18;
  string summary = 19;
  repeated Object tag = 20;
  google.protobuf.Timestamp updated = 21;
  repeated Link url = 22;
  repeated Object to = 23;
  repeated Object bto = 24;
  repeated Object cc = 25;
  repeated Object bcc = 26;
  string mediaType = 27;
  string duration = 28;

  Object actor = 29;
  Object object = 30;
  Object target = 31;
  Object result = 32;
  Object origin = 33;
  Object instrument = 34;
  Person person = 35;
}
